--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/cli": "^6.2.0",
     "@capacitor/core": "^6.2.0",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/postcss": "^4.1.18",
     "dotenv": "^17.2.3",
